syntax = "proto2";
package sigma.software.leovegas.drugstore.api;

option java_package = "sigma.software.leovegas.drugstore.api.protobuf";
option java_outer_classname = "ProtoProductsPrice";

message ProductsPrice {
  map<string, DecimalValue> items = 1;
}
message DecimalValue {
  optional uint32 scale = 1;
  optional uint32 precision = 2;
  optional bytes value = 3;
}